<resources>
    <string name="app_name">BOSM \'19</string>


    <string name="action_profile">Profile</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>

    <string name="action_food">Food</string>
    <string name="action_order_history">Orders</string>
    <string name="action_events">Events</string>
    <string name="action_game">Games</string>
    <string name="action_more">More</string>

    <string name="onBoarding_events">Receive notifications for matches and events. See live scores winners, venues and much more. Read EPC articles on matches that you missed.</string>
    <string name="onBoarding_Order">No more waiting in long queues for your food! Simply order your favorite items from the app, track order status and collect it when it\'s ready. Indulge yourself in the seamless BOSM experience.</string>
    <string name="onBoarding_quiz">Bored? Waiting for a match to start? The app features fun quizzes to keep you busy. Stay up to date with Sports trivia and latest news.</string>
    <string name="onBoarding_tickets">Missed the signings for a show or just made up your mind to attend one? Just sign up for an event through the app and you\'re good to go. And don\'t forget, your QR code is your one identity for all shows.</string>
    
    <string name="chanel_id_general_notifications">General</string>
    <string name="chanel_id_status_change_notifications">Orders</string>
    <string name="chanel_id_rating_notifications">Rating</string>
    <string name="channel_id_rating_events">Events</string>
    <string name="channel_id_quiz">Quiz</string>
    <string name="chanel_name_general_notifications">Announcements</string>
    <string name="chanel_name_status_change_notifications">Order Progress</string>
    <string name="chanel_name_rating_notifications">Food Ratings</string>
    <string name="chanel_desc_general_notifications">Inform about general announcements made by the departments</string>
    <string name="chanel_desc_status_change_notifications">Inform about the progress of any of your placed orders
    </string>
    <string name="chanel_desc_rating_notifications">Reminder to rate your favourite food items that you have recently
        ordered
    </string>
    <string name="notification_content_general_notification">Some random text to be changed</string>

    <string name="elas_fragment_heading">ELAS - QUIZ</string>
    <string name="elas_fragment_category">Category :</string>

    <string name="alert_notification_title">Enable Notifications</string>
    <string name="alert_notification_message">Please enable Auto start on your app to enable notifications on your
        mobile. Notifications are highly vital for a seamless performance
    </string>
    <string name="alert_notification_positive_button">Go to Settings</string>
    <string name="alert_notification_negative_button">Dismiss</string>

    <string name="card_elas_fragment_leaderboardButton">View Leaderboard</string>

    <string name="dia_elas_leaderboard_heading">Leader Board</string>

    <string name="dialog_dont_show_again">Don\'t ask me again</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.
    </string>
    <string name="test_sports_category">FOOTBALL</string>
    <string name="test_timer">00:00:00</string>

    <string name="title_more_fragment">More</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>

    <string name="title_update_failed">Failed to Update App</string>
    <string name="message_update_falied">An error occurred while updating the app. Since this was a crucial update, press OK to restart the app</string>

    <string name="bttn_elasFragQuestions_Submit">Submit Answer</string>
    <string name="bttn_elasFragQuestions_Leaderboard">View Leaderboard</string>

    <string name="link_EPC">https://epcbits.wordpress.com/</string>
    <string name="link_Sponsors">https://www.bits-bosm.org/sponsers.html</string>
    <string name="link_HPC">http://hpconline-bits.weebly.com/</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="title_activity_map_fragment">Map</string>
</resources>
