<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:id="@+id/text_card_elasFrag_category"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_card_elasFrag_question"
            android:text="@string/test_sports_category"
            android:padding="8dp"
            android:textAllCaps="true"
            android:ellipsize="end"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="match_parent"
            android:id="@+id/text_card_elasFrag_question"
            app:layout_constraintTop_toBottomOf="@id/text_card_elasFrag_category"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/lorem_ipsum"
            android:maxLines="2"
            android:padding="8dp"
            android:ellipsize="end"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_card_elasFrag_question"
            app:layout_constraintLeft_toLeftOf="@id/text_card_elasFrag_question"
            app:layout_constraintBottom_toBottomOf="@id/bttn_card_elasFrag_leaderboard"
            android:padding="8dp"
            android:text="@string/test_timer"
            android:id="@+id/text_card_elasFrag_timer"
            android:layout_height="wrap_content"/>

    <Button
            android:layout_width="wrap_content"
            android:id="@+id/bttn_card_elasFrag_leaderboard"
            app:layout_constraintTop_toBottomOf="@id/text_card_elasFrag_question"
            app:layout_constraintRight_toRightOf="@id/text_card_elasFrag_question"
            android:padding="8dp"
            android:text="@string/card_elas_fragment_leaderboardButton"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>